--- a/public/index.ejs
+++ b/public/index.ejs
@@ -2,14 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>React Stats - Web Server</title>
+    <title>GTA$ Converter</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <link href='favicon.ico' />
-    <link href='redLight.png' />
-    <link href='greenLight.png' />
   </head>
   <body>
     <div id="root"></div>
